[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/Assets/tree.png" type="Texture" id=1]
[ext_resource path="res://Game/Assets/crunchy.wav" type="AudioStream" id=2]
[ext_resource path="res://Game/Thing.gd" type="Script" id=3]
[ext_resource path="res://Game/Assets/crunch.wav" type="AudioStream" id=4]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CylinderShape" id=2]
radius = 0.25
height = 1.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 1, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.7
linear_accel = -1.0
scale_curve = SubResource( 4 )

[sub_resource type="SphereMesh" id=6]
radius = 0.2
height = 0.4

[node name="Thing" type="RigidBody"]
collision_layer = 1536
physics_material_override = SubResource( 1 )
contacts_reported = 2
contact_monitor = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="GetBottom" type="RayCast" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -99, 0 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 100, 0 )
collision_mask = 512

[node name="SnapToFloor" type="RayCast" parent="CollisionShape"]
enabled = true
cast_to = Vector3( 0, -100, 0 )

[node name="Visuals" type="Spatial" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="Visuals"]
flip_h = true
pixel_size = 0.002
texture = ExtResource( 1 )

[node name="Particles" type="Particles" parent="Visuals"]
emitting = false
amount = 24
explosiveness = 1.0
local_coords = false
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Poof" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
attenuation_model = 3
unit_db = 3.0

[node name="Attacked" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
attenuation_model = 3
unit_db = 3.0

[connection signal="body_entered" from="." to="." method="_on_Thing_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
